Show brush outline in line tool (and other tools)

BUG: 300160
CCMAIL: salilkapur93@gmail.com
Patch by Salil Kapur (salilkapur93@gmail.com)