krita/plugins/tools/tool_polygon/kis_tool_polygon.cc
@@ -42,6 +42,7 @@ KisToolPolygon::KisToolPolygon(KoCanvasBase *canvas)
         : KisToolPolylineBase(canvas,  KisToolPolylineBase::PAINT, KisCursor::load("tool_polygon_cursor.png", 6, 6))
 {
     setObjectName("tool_polygon");
+    setSupportOutline(true);
 }
 
 KisToolPolygon::~KisToolPolygon()
