krita/ui/tool/kis_tool_rectangle_base.cpp
@@ -34,8 +34,10 @@ void KisToolRectangleBase::paint(QPainter& gc, const KoViewConverter &converter)
     Q_UNUSED(converter);
     Q_ASSERT(currentImage());
 
-    if (mode() == KisTool::PAINT_MODE)
-        paintRectangle(gc, QRect());
+    if(mode() == KisTool::PAINT_MODE) {
+        paintRectangle(gc,QRect());
+    }
+    KisToolPaint::paint(gc,converter);
 }
 
 void KisToolRectangleBase::deactivate()
@@ -102,6 +104,8 @@ void KisToolRectangleBase::mouseMoveEvent(KoPointerEvent *event)
 
         m_dragCenter = QPointF((m_dragStart.x() + m_dragEnd.x()) / 2,
                                (m_dragStart.y() + m_dragEnd.y()) / 2);
+
+        KisToolPaint::requestUpdateOutline(event->point);
     }
     else {
         KisToolShape::mouseMoveEvent(event);
